[project]
name = "assignment-spark-cluster"
version = "0.1.0"
description = "Spark log analysis assignment using distributed computing on AWS EC2"
requires-python = ">=3.10"
dependencies = [
    "awscli>=1.42.35",
    "pyspark>=4.0.0",
    "pandas>=2.0.0",
    "ipykernel>=6.30.1",
    "seaborn>=0.12.0",
    "matplotlib>=3.7.0",
    "polars>=0.19.0",
]

[dependency-groups]
dev = [
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/assignment_spark_cluster"]
